<resources>
    <string name="app_name">Gia sư</string>

    <string name="title_activity_colored">ColoredActivity</string>
    <string name="title_activity_default">DefaultActivity</string>
    <string name="title_activity_voice">VoiceActivity</string>
    <string name="title_activity_sticky">StickyActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_input_type">InputTypeActivity</string>
    <string name="search_hint">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_mess">Chọn loại tài khoản</string>
    <string name="parent">Phụ huynh</string>
    <string name="tutor">Gia sư</string>
    <string name="hello">Xin chào!</string>
    <string name="hello_parent">Chào phụ huynh!</string>
    <string name="hello_tutor">Chào gia sư!</string>
    <string name="hello_mess">Hãy điền đầy đủ thông tin ở dưới để đăng nhập</string>
    <string name="register_mess">Hãy điền đầy đủ thông tin ở dưới để đăng kí</string>
    <string name="full_name">Họ và tên</string>
    <string name="address">Địa chỉ</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="password_retype">Nhập lại mật khẩu</string>
    <string name="phone">Số điện thoại</string>
    <string name="no_account">Không có tài khoản?</string>
    <string name="sign_up">Đăng kí</string>
    <string name="register">Đăng kí</string>
    <string name="login">Đăng nhập</string>
    <string name="forgot">Quên?</string>
    <string name="no_event">Chức năng chưa khả dụng</string>
    <string name="error_login_empty">Vui lòng nhập đầy đủ Email và Mật khẩu</string>
    <string name="error_login_wrong_email">Email chưa được đăng kí!</string>
    <string name="error_login_wrong_pass">Mật khẩu không đúng!</string>
    <string name="error_choice">Vui lòng chọn đối tượng đăng nhập</string>
    <string name="dialog_title_forgot">Nhập email của bạn để đặt lại mật khẩu</string>
    <string name="dialog_confirm">Xác nhận</string>
    <string name="dialog_cancel">Hủy</string>
    <string name="dialog_error_empty">Vui lòng nhập email để xác nhận</string>
    <string name="dialog_error_dont_exists">Email chưa được đăng kí</string>
    <string name="dialog_error_no_email">Email không hợp lệ</string>
    <string name="check_mail">Kiểm tra hòm thư để nhận mật khẩu mới</string>
    <string name="register_error_no_choice">Chọn đối tượng đăng kí !</string>
    <string name="register_error_wrong_pass">Mật khẩu không trùng khớp</string>
    <string name="register_error_no_email">Email không hợp lệ</string>
    <string name="register_error_short_pass">Mật khẩu quá ngắn</string>
    <string name="register_succes">Đăng kí thành công, kiểm tra hòm thư để xác nhận</string>
</resources>
