<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="13"
    tools:context="com.example.whiyew.myapplication.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/login_mess"
        android:textSize="22dp"
        android:textColor="@color/them_login"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_weight="7.5"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:id="@+id/register_std_relative"
                android:paddingLeft="12.5dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/register_img_parent"
                    android:src="@drawable/img_parent_2"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_txt_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignBottom="@+id/register_img_parent"
                    android:text="@string/parent"
                    android:gravity="center"
                    android:textColor="@color/colorLogin"
                    android:textSize="18dp"
                    android:layout_marginBottom="5dp"
                    />
            </RelativeLayout>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/register_check_parent"
                android:src="@drawable/ic_checked"
                android:visibility="gone"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:id="@+id/register_tutor_relative"
                android:paddingLeft="12.5dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/register_img_tutor"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/img_teacher" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_txt_tutor"
                    android:layout_alignParentBottom="true"
                    android:layout_alignBottom="@+id/register_img_tutor"
                    android:text="@string/tutor"
                    android:gravity="center"
                    android:textColor="@color/colorLogin"
                    android:textSize="18dp"
                    android:layout_marginBottom="5dp"/>
            </RelativeLayout>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/register_check_tutor"
                android:src="@drawable/ic_checked"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:visibility="gone"
                />
        </RelativeLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/register_hello"
        android:text="@string/hello"
        android:textSize="18dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/register_mess"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/register_email_linear"
            android:background="@drawable/edittext_unchecked_bg"
            android:layout_marginBottom="5dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/register_envelope"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_envelope"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/register_email"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black"
                android:hint="@string/email"
                android:maxLines="1"
                android:lines="1"
                android:background="@android:color/transparent"
                android:layout_marginLeft="20dp"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/register_del_email"
                android:src="@drawable/ic_close"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:visibility="gone"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/register_pass_linear"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_background">

            <ImageView
                android:id="@+id/register_lock_pass"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_lock" />

            <EditText
                android:id="@+id/register_pass"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/register_del_pass"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_close"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/register_pass_retype_linear"
            android:background="@drawable/button_background"
            android:layout_weight="1">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/register_lock_pass_retype"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_lock"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/register_pass_retype"
                android:inputType="textPassword"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/black"
                android:hint="@string/password_retype"
                android:maxLines="1"
                android:lines="1"
                android:background="@android:color/transparent"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/register_del_pass_retype"
                android:src="@drawable/ic_close"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"
                android:visibility="gone"/>


        </LinearLayout>



    </LinearLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/register_button"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_color_unavailable"/>
</LinearLayout>
