<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button_color_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_mess"
            android:text="@string/dialog_title_forgot"
            android:gravity="center"
            android:textSize="18dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/dialog_envelope"
                android:src="@drawable/ic_envelope"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_editext"
                android:lines="1"
                android:maxLines="1"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"/>
            
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_close"
                android:id="@+id/dialog_delete"
                android:visibility="gone"/>


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/line"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="20dp"
            android:weightSum="2">



            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:textColor="@color/theme_secondary_text"
                android:id="@+id/dialog_cancel"
                android:text="@string/dialog_cancel"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_confirm"
                android:background="@android:color/transparent"
                android:text="@string/dialog_confirm"
                android:textColor="@color/them_login"
                android:layout_marginRight="20dp"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>